# agentic-compete

./: README.md  pyproject.toml
agents/: competition_analyzer.py  eda_agent.py  ensemble_agent.py  feature_agent.py  model_agent.py  submission_agent.py
colab/: code_templates.py  notebook_builder.py  output_parser.py  session_manager.py
config/: model_registry.yaml  settings.yaml
core/: decision_engine.py  memory.py  orchestrator.py  state.py
docs/: architecture.md
kaggle/: competition_client.py
prompts/: system_prompt.md
scripts/: init_competition.py  run_competition.py  setup_colab_mcp.sh
strategies/: escalation_rules.py
tests/: test_core.py
